# AgentGuard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.gsd/: DECISIONS.md
agentguard/: __init__.py  __main__.py  adapters.py  cli.py  config.py  evaluator.py  gateway.py  metadata.py  models.py  policy.py  reporting.py  scanner.py  trace.py
docs/: api-contract.md  architecture.md  demo-recording-script.md  evaluation.md  implementation-plan.md  interview-guide.md  mcp-adapter-design.md  project-retrospective.md  release-notes.md  resume-bullets.md  roadmap.md  task-breakdown.md  threat-model.md  workbench-design.md
docs/report-samples/: demo-artifacts.md  evaluation-sample.json  evaluation-sample.md  evaluation-sample.sarif.json
examples/: agentguard.yml  eval.failure-demo.jsonl  mcp.sample.json
examples/poisoned_mcp_server/: README.md
examples/safe_mcp_server/: README.md  server.py
scripts/: demo_e2e.py
tests/: test_cli.py  test_evaluator.py  test_gateway.py  test_mcp_adapter.py  test_metadata.py  test_policy.py  test_reporting.py  test_scanner.py
tests/fixtures/: security_cases.jsonl
tests/fixtures/mcp_configs/: invalid_args.json  invalid_env.json  invalid_missing_command.json  mcp_servers.yaml  sample.json  server_risks.json  servers_array.json  servers_dict.json
