[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Security and trajectory evaluation gateway for MCP-enabled AI agents."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "AgentGuard contributors" }]
dependencies = [
  "fastapi>=0.116",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.28,<2",
]
dev = [
  "httpx>=0.27",
  "mcp>=1.28,<2",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
agentguard = "agentguard.cli:app"

[tool.setuptools.packages.find]
include = ["agentguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
